2010-11-01  Vadim Kurland  <vadim@netcitadel.com>

	* CompilerDriver.cpp (CompilerDriver::getAbsOutputFileName): fixed
	SF bug 3090249 "fwb_ipt ignores -d option ". Documented behavior
	is for the compiler to create files in the directory specified by
	the argument of the "-d" command line flag. If flag "-d" is not
	provided, files should be created in the current directory.

2010-10-29  Vadim Kurland  <vadim@vk.crocodile.org>

	* PolicyCompiler_ipt.cpp (checkForStatefulICMP6Rules::processNext):
	fixed SF bug 3094273 "no state needed for ipv6-icmp in
	ip6tables". Rules that match ICMPv6 objects should be
	stateless. Compiler will check for this and reset "stateful" flag
	of a rule and issue warning if the rule was built stateful in the
	GUI. This could be version-dependent, we may need to revisit this
	in the future when netfilter fixes the underlying issue. Some
	resources: https://bugzilla.redhat.com/show_bug.cgi?id=243739
	https://bugs.launchpad.net/ubuntu/+source/iptables/+bug/479105

	* src/res/objects_init.xml.in: added ICMPv6 object "parameter
	problem" (type 4, any code) per SF feature request 3094743.  Also
	added service group object "ipv6 unreachable messages" that
	includes ICMPv6 messages "destination unreachable", "packet too
	big", "parameter problem" and "time exceeded" per SF feature
	request 3094758

	* configlets/linux24/automatic_rules: implemented SF feature
	request 3094738 "Set the HL to 255 for IPv6 Neighbor
	Discovery". Neighbor discovery packets must have hop limit of 255
	per RFC 2461. Automatically generated rules that match neighbor
	discovery packets will math hooplimit 255.

	* configlets/linux24/update_addresses: fixed SF bug 3091069:
	"Routing configuration failed". Iptables script generated by
	fwbuilder did not configure broadcast when it added ip addresses
	to interfaces. Using "ip addr add ADDR/NM boradcast + dev INTF"
	syntax to do this.

	* OSConfigurator_bsd.cpp (compare_names): fixed #1807 "wrong order