@@ -1,3 +1,8 @@
+2010-11-02  Vadim Kurland  <vadim@vk.crocodile.org>
+
+	* OSConfigurator_linux24_interfaces.cpp (printVerifyInterfacesCommands):
+	fixed #1824 "should not try to verify wildcard interfaces".
+
 2010-11-01  Vadim Kurland  <vadim@netcitadel.com>
 
 	* CompilerDriver.cpp (CompilerDriver::getAbsOutputFileName): fixed
